seedboxk8s/applications/prometheus/IngressRoute.grafana.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: prometheus
  annotations:
    kubernetes.io/ingress.class: traefik-tailscale
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Grafana
    gethomepage.dev/group: Infrastructure
    gethomepage.dev/icon: grafana
    gethomepage.dev/href: https://grafana.${productionClusterFqdn}
spec:
  ingressClassName: traefik-tailscale
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.${productionClusterFqdn}`)
      kind: Rule
      middlewares:
        - name: authelia
          namespace: authelia
      services:
        - name: kube-prometheus-stack-grafana
          kind: Service
          port: 80
  tls:
    secretName: seedbox-wildcard-backing-secret
